--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     --primario: #9c27b0;
     --primarioOscuro: #89119d;
     --secundario: #ffce00;
-    --secundarioOscuro: rgb(233,287,2);
+    --secundarioOscuro: rgb(233, 187, 2);
     --blanco: #fff;
     --negro: #000;
 
@@ -35,7 +35,7 @@ a {
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
 }
 
 .contenedor {
@@ -180,7 +180,7 @@ font-size: 4rem;
 } */
 .nosotros__imagen {
     grid-row: 1 / 2;
-    width: 100%;
+    
 }
 @media (min-width: 768px) {
     .nosotros__imagen {
@@ -207,6 +207,39 @@ font-size: 4rem;
 .bloque__titulo {
     margin: 0;
 }
-.bloque__imagen {
-    width: 100%;
+
+@media (min-width: 768px) {
+    .camisa {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+.formulario {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+.formulario__campo {
+    border: 1rem solid var(--primarioOscuro);
+    background-color: transparent;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
+}
+.formulario__submit {
+    background-color: var(--secundario);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--fuentePrincipal);
+    padding: 2rem;
+    transition: background-color .3s ease;
+    grid-column: 1 / 3 ;
+
+}
+.formulario__submit:hover {
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
 }
